# spaghetti

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  openapi.yaml
migrations/2021-01-16-133452_create_redirects/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: base.html.tera  index.html.tera  landing.html.tera
