[package]
name = "spaghetti"
version = "0.2.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
openssl = "*"
url = "2.2.0"
anyhow = "1.0.38"
base64 = "0.13.0" # deprecate
rand = { version = "0.8.2", features = ["small_rng"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "diesel_postgres_pool", "tera_templates"]

[[bin]]
name = "server"
path = "src/main.rs"
